  and API updates have been a little more frequent lately. They are documented below and in imgui.cpp and should not affect all users.
- Please report any issue!

-----------------------------------------------------------------------
 VERSION 1.92.6 WIP (In Progress)
-----------------------------------------------------------------------

Breaking Changes:

- Fonts: Fixed handling of `ImFontConfig::FontDataOwnedByAtlas = false` which
  did erroneously make a copy of the font data, essentially defeating the purpose
  of this flag and wasting memory (undetected since July 2015 and now spotted
  by @TellowKrinkle, this is perhaps the oldest bug in Dear ImGui history,
  albeit for a rarely used feature!) (#9086, #8465)
  HOWEVER, fixing this bug is likely to surface bugs in user/app code:
  - Prior to 1.92, font data only needs to be available during the atlas->AddFontXXX() call.
  - Since 1.92, font data needs to available until atlas->RemoveFont(), or more typically
    until a shutdown of the owning context or font atlas.
  - The fact that handling of `FontDataOwnedByAtlas = false` was broken
    bypassed the issue altogether.

Other Changes:

- Fonts:
  - Fixed an issue related to EllipsisChar handling, while changing
    font loader or font loader flags dynamically in Style->Fonts menus.
- Textures:
  - Fixed a building issue when ImTextureID is defined as a struct.
  - Fixed displaying texture # in Metrics/Debugger window.
- Menus:
  - Fixed MenuItem() label position and BeginMenu() arrow/icon/popup positions,
    when used inside a line with a baseline offset.
- TreeNode:
  - Fixed highlight position when used inside a line with a large text baseline offset.
    (never quite worked in this situation; but then most of the time the text
    baseline offset ends up being zero or FramePadding.y for a given line).
- Tables:
  - Fixed an issue where a very thin scrolling table would advance parent layout